@@ -56,7 +56,6 @@ add_definitions(
   -DORTHANC_PLUGIN_NAME="${PLUGIN_NAME}"
   -DORTHANC_PLUGIN_VERSION="${PLUGIN_VERSION}"
   -DORTHANC_ENABLE_LOGGING=1
-  -DORTHANC_ENABLE_LOGGING_PLUGIN=1
   -DORTHANC_ENABLE_PLUGINS=1
   -DORTHANC_BUILDING_SERVER_LIBRARY=0
   )
@@ -71,7 +70,6 @@ add_library(DelayedDeletion SHARED
   ${AUTOGENERATED_SOURCES}
   ${ORTHANC_CORE_SOURCES}
   ${CMAKE_SOURCE_DIR}/../../../Plugins/Samples/DelayedDeletion/Plugin.cpp
-  ${CMAKE_SOURCE_DIR}/../../../Plugins/Samples/DelayedDeletion/LargeDeleteJob.cpp
   ${CMAKE_SOURCE_DIR}/../../../Plugins/Samples/DelayedDeletion/PendingDeletionsDatabase.cpp
   ${CMAKE_SOURCE_DIR}/../../../Plugins/Engine/PluginsEnumerations.cpp
   ${CMAKE_SOURCE_DIR}/../../../Plugins/Samples/Common/OrthancPluginCppWrapper.cpp
